[gd_scene load_steps=23 format=2]

[ext_resource path="res://sprites/spacecraft_shadow.png" type="Texture" id=1]
[ext_resource path="res://sprites/spacecraft_wings.png" type="Texture" id=2]
[ext_resource path="res://sprites/spacecraft_body.png" type="Texture" id=3]
[ext_resource path="res://sprites/spacecraft_colors.png" type="Texture" id=4]
[ext_resource path="res://sprites/light_cone.png" type="Texture" id=5]
[ext_resource path="res://sprites/spacecraft_glass.png" type="Texture" id=6]
[ext_resource path="res://sprites/spacecraft_glass_norm.png" type="Texture" id=7]
[ext_resource path="res://sprites/spacecraft_body_norm.png" type="Texture" id=8]
[ext_resource path="res://sprites/spacecraft_wings_norm.png" type="Texture" id=9]
[ext_resource path="res://script/player.gd" type="Script" id=10]
[ext_resource path="res://audio/sfx_metal_scretch.ogg" type="AudioStream" id=11]
[ext_resource path="res://sprites/spacecraft_colors_blur.png" type="Texture" id=12]
[ext_resource path="res://sprites/spacecraft_main_light.png" type="Texture" id=13]

[sub_resource type="CircleShape2D" id=1]
radius = 29.2748

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.468085, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.374908, 0.435348, 0.761719, 0.414894, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )
width = 128

[sub_resource type="ParticlesMaterial" id=4]
lifetime_randomness = 0.5
emission_shape = 1
emission_sphere_radius = 8.0
flag_disable_z = true
spread = 180.0
flatness = 0.33
gravity = Vector3( 0, 0, 0 )
initial_velocity = 120.0
initial_velocity_random = 1.0
angular_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 5.0
color_ramp = SubResource( 3 )

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0.0638298, 0.170213, 0.425532 )
colors = PoolColorArray( 1, 0.995728, 0.984375, 1, 0.901367, 0.654377, 0.130276, 1, 0.211765, 0.0117647, 0.0117647, 0.145098 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )
width = 512

[sub_resource type="ParticlesMaterial" id=7]
lifetime_randomness = 0.47
trail_divisor = 2
emission_shape = 1
emission_sphere_radius = 7.0
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 5.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 400.0
initial_velocity_random = 0.13
angular_velocity = 20.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -300.0
linear_accel_random = 0.14
damping = 100.0
damping_random = 1.0
scale = 3.5
color_ramp = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
lifetime_randomness = 0.47
trail_divisor = 2
emission_shape = 1
emission_sphere_radius = 7.0
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 5.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 400.0
initial_velocity_random = 0.13
angular_velocity = 20.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -300.0
linear_accel_random = 0.14
damping = 100.0
damping_random = 1.0
scale = 5.0
color_ramp = SubResource( 6 )

[sub_resource type="Animation" id=9]
resource_name = "color_lights"
length = 2.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("colors:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.6, 0.65, 0.7, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.313726 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.313726 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.658824 ) ]
}

[node name="player" type="KinematicBody2D"]
script = ExtResource( 10 )

[node name="coll" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="cam_position" type="Position2D" parent="."]
position = Vector2( 178.585, 0 )

[node name="shadow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.545098 )
show_behind_parent = true
light_mask = 5
rotation = 1.5708
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="sprites" type="Node2D" parent="."]
rotation = 1.5708
scale = Vector2( 0.25, 0.25 )

[node name="main_light" type="Light2D" parent="sprites"]
texture = ExtResource( 13 )
texture_scale = 5.0
range_height = 73.1
range_layer_max = 1
range_item_cull_mask = 3

[node name="las1_pos" type="Position2D" parent="sprites"]
position = Vector2( -32, -96 )
rotation = -1.5708
scale = Vector2( 0.7, 0.7 )

[node name="las2_pos" type="Position2D" parent="sprites"]
position = Vector2( 32, -96 )
rotation = -1.5708
scale = Vector2( 0.7, 0.7 )

[node name="sparkles_left" type="Particles2D" parent="sprites"]
position = Vector2( -40, 0 )
emitting = false
amount = 150
lifetime = 0.3
explosiveness = 0.2
randomness = 0.2
local_coords = false
process_material = SubResource( 4 )

[node name="sparkles_right" type="Particles2D" parent="sprites"]
position = Vector2( 40, 0 )
emitting = false
amount = 150
lifetime = 0.3
explosiveness = 0.2
randomness = 0.2
local_coords = false
process_material = SubResource( 4 )

[node name="burner_left" type="Particles2D" parent="sprites"]
position = Vector2( -18.8366, 11.4962 )
rotation = 1.74482
emitting = false
amount = 250
local_coords = false
process_material = SubResource( 7 )

[node name="burner_right" type="Particles2D" parent="sprites"]
position = Vector2( 17.7285, 13.7122 )
rotation = 4.5501
emitting = false
amount = 250
local_coords = false
process_material = SubResource( 7 )

[node name="body" type="Sprite" parent="sprites"]
self_modulate = Color( 0.12549, 0.12549, 0.12549, 1 )
light_mask = 3
texture = ExtResource( 3 )
normal_map = ExtResource( 8 )

[node name="wings" type="Sprite" parent="sprites"]
self_modulate = Color( 0.235294, 0.235294, 0.235294, 1 )
light_mask = 3
texture = ExtResource( 2 )
normal_map = ExtResource( 9 )

[node name="colors" type="Sprite" parent="sprites"]
modulate = Color( 0.670588, 0.670588, 0.670588, 1 )
light_mask = 3
texture = ExtResource( 4 )

[node name="blur" type="Light2D" parent="sprites/colors"]
light_mask = 3
texture = ExtResource( 12 )
color = Color( 0, 0.172549, 0.964706, 1 )
energy = 1.63

[node name="glass" type="Sprite" parent="sprites"]
modulate = Color( 0.443137, 0.47451, 0.494118, 1 )
light_mask = 3
texture = ExtResource( 6 )
normal_map = ExtResource( 7 )

[node name="burner" type="Particles2D" parent="sprites"]
position = Vector2( 0, 58.0335 )
emitting = false
amount = 250
local_coords = false
process_material = SubResource( 8 )

[node name="burner_light" type="Light2D" parent="sprites"]
position = Vector2( 0, 48 )
enabled = false
texture = ExtResource( 5 )
offset = Vector2( 0, 256 )
color = Color( 0.686275, 0.568627, 0.156863, 1 )
energy = 3.0
range_item_cull_mask = 2
shadow_item_cull_mask = 0
__meta__ = {
"_edit_lock_": true
}

[node name="color_lights" type="AnimationPlayer" parent="sprites"]
anims/color_lights = SubResource( 9 )

[node name="sfx_scratch" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
pitch_scale = 2.0
bus = "sFX"
